--- a/index のコピー.html
+++ b/index のコピー.html
@@ -104,8 +104,8 @@
       <h1 class="top-title">音楽</h1>
       <div class="left-box left-box00">
         <h2>好きな歌手</h2>
-        <p>私の好きなアーティストは<strong>西野カナ</strong>です。
-           <br>最近は「恋する気持ち」という曲をよく聞きます。
+        <p>私の好きなアーティストは<strong>Taylor Swift</strong>です。
+           <br>最近はstay stay stayという曲をよく聞きます。
         </p>
         <a href="http://www.universal-music.co.jp/taylor-swift/" class="botann">Taylor Swift
            <span class="edge edge1"></span>
